feat: 千岛礼物新年礼包

--- a/pages/subpages/mall/goods/subpages/order-check/index.wxml
+++ b/pages/subpages/mall/goods/subpages/order-check/index.wxml
@@ -89,11 +89,11 @@
       <image class="shop-icon" wx:if="{{item.shopInfo}}" src="{{item.shopInfo.logo}}" />
       <view>{{item.shopInfo ? item.shopInfo.name : '官方自营'}}</view>
     </view>
-    <view class="goods-item row" wx:for="{{item.goodsList}}" wx:key="index" wx:for-item="goods">
+    <view class="goods-item row top" wx:for="{{item.goodsList}}" wx:key="index" wx:for-item="goods">
       <image class="goods-img" src="{{goods.cover}}" mode="aspectFill" lazy-load />
       <view class="goods-content">
         <view class="goods-name omit">{{goods.name}}</view>
-        <view class="goods-sku omit single" wx:if="{{goods.selectedSkuName}}">规格：{{goods.selectedSkuName}}</view>
+        <view class="goods-sku omit" wx:if="{{goods.selectedSkuName}}">规格：{{goods.selectedSkuName}}</view>
         <view class="goods-price-wrap">
           <price-unit price="{{goods.price || 0}}" />
           <view class="count-wrap">
