--- a/pages/subpages/mine/components/goods-item/index.wxss
+++ b/pages/subpages/mine/components/goods-item/index.wxss
@@ -17,7 +17,6 @@
   justify-content: space-between; 
   padding-right: 18rpx;
   flex: 1; 
-  height: 190rpx;
 }
 .goods-name {
   color: #333;
@@ -25,10 +24,12 @@
   font-weight: 500;
 }
 .goods-sku {
-  padding: 8rpx 16rpx;
+  margin-top: 8rpx;
+  padding: 8rpx 12rpx;
   width: fit-content;
   color: #999;
   font-size: 24rpx;
+  line-height: 1.8;
   background: #f9f9f9;
   border-radius: 8rpx;
 }
@@ -36,6 +37,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 4rpx;
 }
 .count-wrap {
   font-size: 24rpx;
